CICO-49148: Zest station - NoMo SoHo - fix for center align issue

--- a/zest_station/css/themes/nomo/theme.less
+++ b/zest_station/css/themes/nomo/theme.less
@@ -75,6 +75,9 @@
         #main {
             #calc > #height > .remove(100%, 125px);
             top: 125px;
+            &.centered {
+                padding-top: 0;
+            }
         }
         .entry.input {
             .icons {
